--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,10 @@ dependencies {
 
     // design appbarlayout
     implementation 'com.google.android.material:material:1.3.0-alpha01'
+
+    // navigation
+    def nav_version = "2.3.0-alpha05"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
 }
