--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,7 +55,11 @@ dependencies {
 
     // fresco
     implementation 'com.facebook.fresco:fresco:0.12.0'
+    // 支持 GIF 动图，需要添加
+    implementation 'com.facebook.fresco:animated-gif:0.12.0'
+    // 支持 WebP （静态图+动图），需要添加
     implementation 'com.facebook.fresco:animated-webp:0.12.0'
+    // 仅支持 WebP 静态图，需要添加
     implementation 'com.facebook.fresco:webpsupport:0.12.0'
 
     // json moshi
